--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
           align-items: center;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
-          justify-content: end;
+          justify-content: flex-end;
   margin-bottom: 2vh;
 }
 
