--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     margin-bottom: 2vh;
 }
 
